--- a/src/app/pages/payrollprocess/overview/reviewallemp/review.html
+++ b/src/app/pages/payrollprocess/overview/reviewallemp/review.html
@@ -18,7 +18,35 @@
     </div>
     <div class="modal-body">
         <div class="col-lg-12">
-            
+            <div class="modal-sub-page-navigation">
+                <ul>
+                    <li ng-click="pendingVerification=true;onholdVerification=false;" ng-class="{active:pendingVerification}">
+                        <a class="anchor-sm">Pending</a>
+                    </li>
+                    <li ng-click="pendingVerification=false;onholdVerification=true;" ng-class="{active:onholdVerification}">
+                        <a class="anchor-sm">Onhold</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="clear-fix"></div>
+            <br/>
+
+        </div>
+        <div ng-if="isRowSelected && !noDataFound" class="col-lg-12">
+            <div class="pull-right">
+                <button type="button" ng-click="verifyAttendance()" class="btn btn-primary">Verify</button>
+                <button class="btn btn-warning">Onhold</button>
+            </div>
+        </div>
+
+        <div ng-if="pendingVerification  && !noDataFound" class="col-lg-12">
+            <div ui-grid="gridReviewAllEmpOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
+                ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
+        </div>
+        <div data-ng-if="pendingVerification && noDataFound" class="col-lg-6">
+            <div class="alert alert-success" role="alert">Hooray, No data found !</div>
+        </div>
+        <div ng-if="onholdVerification" class="col-lg-12">
             <div ui-grid="gridReviewAllEmpOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
                 ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
         </div>
