--- a/src/app/pages/payrollprocess/overview/overview.html
+++ b/src/app/pages/payrollprocess/overview/overview.html
@@ -31,8 +31,8 @@
                 <div class="row col-sm-12">
                     <div class="month-details col-sm-10">
                         <div class="col-sm-3 clear-side-padding dater">
-                            <h3 class="clear-vertical-margin name ">{{monthName}} Payroll</h3>
-                            <p class="clear-bottom date-range ">{{monthName}} 1 - {{monthName}} {{lastDayNumber}} {{year}}</p>
+                            <h3 class="clear-vertical-margin name ">{{monthStartName}} Payroll</h3>
+                            <p class="clear-bottom date-range ">{{monthStartName}} {{firstDayNumber}} - {{monthEndName}} {{lastDayNumber}} {{year}}</p>
                         </div>
                         <div class="col-sm-3 employees right-vr form-group clear-vertical-margin">
                             <label class="clear-vertical-margin">Total Employees</label>
