--- a/src/app/pages/payrollprocess/overview/reviewallemp/review.html
+++ b/src/app/pages/payrollprocess/overview/reviewallemp/review.html
@@ -44,7 +44,7 @@
                 ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
         </div>
         <div data-ng-if="pendingVerification && noDataFound" class="col-lg-6">
-            <div class="alert alert-success" role="alert">Hooray, No data found !</div>
+            <div class="alert alert-success" role="alert">This Month Salary Alerady Verified!</div>
         </div>
         <div ng-if="onholdVerification" class="col-lg-12">
             <div ui-grid="gridReviewAllEmpOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
