--- a/src/app/pages/payrollprocess/overview/reviewallemp/review.html
+++ b/src/app/pages/payrollprocess/overview/reviewallemp/review.html
@@ -11,7 +11,7 @@
                     <span>2</span> CompOff Applied</a>
 
             </div> -->
-            <span data-ng-click="$dismiss();" class="pull-right">
+            <span data-ng-click="closeModal()" class="pull-right">
                 <i class="fa fa-times"></i>
             </span>
         </div>
