--- a/src/app/pages/payrollprocess/overview/salaryapproval/salaryapproval.html
+++ b/src/app/pages/payrollprocess/overview/salaryapproval/salaryapproval.html
@@ -20,8 +20,8 @@
         
         <div ng-if="isRowSelected && !noDataFound" class="col-lg-12">
             <div class="pull-right">
-                <button type="button" ng-click="aprrovedAttendance()" class="btn btn-primary">Approve</button>
-                <button class="btn btn-danger" ng-click="rejectedAttendance()" >Reject</button>
+                <button type="button" ng-click="aprroveAttendance(101)" class="btn btn-primary">Approve</button>
+                <button class="btn btn-danger" ng-click="aprroveAttendance(102)" >Reject</button>
             </div>
         </div>
 
