--- a/src/app/pages/payrollprocess/overview/leaveandattendance/request.html
+++ b/src/app/pages/payrollprocess/overview/leaveandattendance/request.html
@@ -1,91 +1,93 @@
 <div class="modal-content">
     <div class="modal-header bg-primary title-bar">
         <div class="col-lg-12">
-            <!-- <p class="text-center">New Loan- Name Of Employee</p> -->
+            <!-- <p class="text-center">
+                <b>Pending And Onhold Leave Of Sep</b>
+            </p> -->
             <div id="status-buttons" class="text-center">
-                <a ng-init="value=1" ng-click="value=1" ng-class="{active:value==1}">
+                <a ng-init="value=1" ng-click="value=1;isRowSelected=false" ng-class="{active:value==1}">
                     <span>1</span>Leave Applied</a>
-                <a ng-click="value=2" ng-class="{active:value==2}">
+                <a ng-click="next()" ng-class="{active:value==2}">
                     <span>2</span> CompOff Applied</a>
 
             </div>
-            <span data-ng-click="$dismiss();" class="pull-right">
+            <span data-ng-click="closeModal()" class="pull-right">
                 <i class="fa fa-times"></i>
             </span>
         </div>
     </div>
     <div class="modal-body">
-        <div class="col-lg-12">
-            <button ng-if="value==1" class="btn btn-success pull-right" ng-click="SaveContinue()">Save & Continue</button>
-            <button ng-if="value==2" class="btn btn-success pull-right" ng-click="SaveClose()">Save & Close</button>
-        </div>
-        <div ng-if="value==1" class="col-lg-12">
-            <div ui-grid="gridLeaveOptions" class="">
+        <div ng-if="value==1">
+            <div class="col-lg-12">
+                <div class="modal-sub-page-navigation">
+                    <ul>
+                        <li ng-click="leavePending();pendingLeave=true;onholdLeave=false;" ng-class="{active:pendingLeave}">
+                            <a class="anchor-sm">Pending</a>
+                        </li>
+                        <li ng-click="leaveOnhold();pendingLeave=false;onholdLeave=true;" ng-class="{active:onholdLeave}">
+                            <a class="anchor-sm">Onhold</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="clear-fix"></div>
+                <br/>
+
             </div>
-            <div data-ng-if="noDataFoundForLeave" class="alert alert-success" role="alert">Hooray, No Pending leave requests for approval!</div>
-        </div>
-        <div ng-if="value==2" class="col-lg-12">
-            <div ui-grid="gridCompOffOptions" class="">
+            <div class="col-lg-12">
+                <div class="pull-right">
+                    <button ng-if="isRowSelected" type="button" ng-click="leaveVerify()" class="btn btn-primary">Verify</button>
+                    <button ng-if="isRowSelected" type="button" class="leaveOnhold()">Onhold</button>
+                    <button type="button" ng-click="next()" class="btn btn-success">Next</button>
+                </div>
             </div>
-            <div data-ng-if="noDataFoundForCompOff" class="alert alert-success" role="alert">Hooray, No Pending comoff requests for approval!</div>
+
+            <div class="col-lg-12">
+                <div ui-grid="gridLeaveOptions" ui-grid-selection ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
+            </div>
+            <div data-ng-if="pendingVerification && noDataFound" class="col-lg-6">
+                <div class="alert alert-success" role="alert">This Month Salary Alerady Verified!</div>
+            </div>
+
+            <!-- <div ng-if="onholdVerification" class="col-lg-12">
+            <div ui-grid="gridReviewAllEmpOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
+                ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
+        </div> -->
+        </div>
+        <div ng-if="value==2">
+            <div class="col-lg-12">
+                <div class="modal-sub-page-navigation">
+                    <ul>
+                        <li ng-click="" ng-class="{active:pendingCompOff}">
+                            <a class="anchor-sm">Pending</a>
+                        </li>
+                        <li ng-click="" ng-class="{active:onholdCompOff}">
+                            <a class="anchor-sm">Onhold</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="clear-fix"></div>
+                <br/>
+
+            </div>
+            <div class="col-lg-12">
+                <div class="pull-right">
+                    <button ng-if="isCompOffRowSelected" type="button" ng-click="verifyAttendance()" class="btn btn-primary">Verify</button>
+                    <button ng-if="isCompOffRowSelected" type="button" class="btn btn-warning">Onhold</button>
+                    <button type="button" ng-click="" class="btn btn-success">Save & Close</button>
+                </div>
+            </div>
+
+            <div class="col-lg-12">
+                <div ui-grid="gridCompOffOptions" ui-grid-selection ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
+            </div>
+            <div data-ng-if="pendingVerification && noDataFound" class="col-lg-6">
+                <div class="alert alert-success" role="alert">This Month Salary Alerady Verified!</div>
+            </div>
+
+            <!-- <div ng-if="onholdVerification" class="col-lg-12">
+            <div ui-grid="gridReviewAllEmpOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
+                ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
+        </div> -->
         </div>
     </div>
 </div>
-
-
-<script type="text/ng-template" id="approve-reason-template">
-    <div class="popover-content">
-            <form ng-submit="approved(leave,approvedForm)" name="approvedForm">
-            <div class="col-md-12 clear-side-padding">
-
-                <div class="form-group">
-                   <label>Comment
-                        <span class="font-red">*</span>
-                   </label>
-                   <textarea placeholder"Reason" data-ng-model="leave.comment" class="form-control" required></textarea>
-                </div>
-            </div>
-            <div class="form-group pull-right">
-                <button style="padding:0px 8px;font-size: 15px;" class="btn btn-primary" >Approve</button>
-            </div>
-        </form>
-        </div>
-
-  </script>
-
-<script type="text/ng-template" id="reject-reason-template">
-    <div class="popover-content">
-            <form ng-submit="rejected(leave,rejectForm)" name="rejectForm">
-            <div class="col-md-12 clear-side-padding">
-
-                <div class="form-group">
-                   <label>Reason
-                        <span class="font-red">*</span>
-                   </label>
-                   <textarea placeholder"Reason" data-ng-model="leave.rejectReason" class="form-control" required></textarea>
-                </div>
-            </div>
-            <div class="form-group pull-right">
-                <button style="padding:0px 8px;font-size: 15px;" class="btn btn-danger" >Reject</button>
-            </div>
-        </form>
-        </div>
-
-  </script>
-<script type="text/ng-template" id="onhold-reason-template">
-    <div class="popover-content">
-        <form ng-submit="onhold(leave,onholdForm)" name="onholdForm">
-            <div class="col-md-12 clear-side-padding">
-                <div class="form-group">
-                    <label>Reason
-                      <span class="font-red">*</span>
-                    </label>
-                    <textarea placeholder"Reason" data-ng-model="leave.onholdReason"class="form-control" required></textarea>
-                </div>
-            </div>
-            <div class="form-group pull-right">
-                <button style="padding:0px 8px;font-size: 15px;" class="btn btn-warning" >Onhold</button>
-            </div>
-        </form>
-        </div>
-  </script>
